--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>mr.puppy.com</title>
+  <title>Mr.puppy.com</title>
 </head>
 
 <body>
